--- a/hostapd/hostapd.conf
+++ b/hostapd/hostapd.conf
@@ -1,6 +1,6 @@
 interface=wlan0
 driver=nl80211
-ssid=PiUSBConfig
+ssid=RemoteUSB
 hw_mode=g
 channel=7
 wmm_enabled=0
@@ -8,7 +8,7 @@ macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
 wpa=2
-wpa_passphrase=your_hotspot_password
+wpa_passphrase=UsB654321
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
